<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:backgroundTint="@color/blue_wave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/password_edit"
        android:inputType="textPassword"
        android:shadowColor="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_marginEnd="130dp"
        android:layout_height="match_parent"
        android:autofillHints=""
        android:visibility="invisible"
        android:hint="@string/hint_phone_number"
        android:textSize="22sp"

        android:typeface="normal" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/secret_code"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.45"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:layout_width="15dp"
            android:id="@+id/rounded_1"
            android:layout_height="15dp"
            android:layout_margin="8dp"
            android:background="@drawable/unfilled_shape" />

        <View
            android:id="@+id/rounded_2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="8dp"
            android:background="@drawable/unfilled_shape" />


        <View
            android:id="@+id/rounded_3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="8dp"
            android:background="@drawable/unfilled_shape" />

        <View
            android:id="@+id/rounded_4"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_margin="8dp"
            android:background="@drawable/unfilled_shape" />

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81"
        app:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp">

        <!-- Row 1 -->
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:foreground="@android:color/transparent"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <!-- Row 2 -->
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <!-- Row 3 -->
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <!-- Row 4 -->

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/oublie"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:backgroundTint="#FDF6FE"
            android:rotationY="0"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:icon="@drawable/tag_x"
            app:iconPadding="20dp"
            app:iconSize="30dp"
            app:iconTint="@color/black"
            app:layout_column="2"
            app:layout_columnWeight="0"
            app:layout_gravity="fill|end"
            app:layout_row="3" />


    </androidx.gridlayout.widget.GridLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/submit_btn"
        app:backgroundTint="@color/blue_wave"
        android:background="@drawable/button_zoom_effect"
        android:text="@string/suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>