<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/bienvenue_a_wave"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayoutInputs"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayoutInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:columnCount="2"
        app:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        app:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            app:ccp_customMasterCountries="SN,CG,CI,ML"
            app:ccp_defaultNameCode="SN"
            android:id="@+id/country_code"
            android:layout_marginTop="5dp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="false"
            app:ccp_showFullName="false">
        </com.hbb20.CountryCodePicker>


        <EditText
            android:id="@+id/phone_number"
            android:shadowColor="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_marginEnd="130dp"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/hint_phone_number"
            android:textSize="22sp"
            android:typeface="normal" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81"
        app:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp">

        <!-- Row 1 -->
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:foreground="@android:color/transparent"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <!-- Row 2 -->
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1" />

        <!-- Row 3 -->
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2" />

        <!-- Row 4 -->



        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number_click_effect"
            android:backgroundTint="#FDF6FE"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:backgroundTint="#FDF6FE"
            android:rotationY="0"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:icon="@drawable/tag_x"
            app:iconPadding="20dp"
            app:iconSize="30dp"
            app:iconTint="@color/black"
            app:layout_column="2"
            app:layout_columnWeight="0"
            app:layout_gravity="fill|end"
            app:layout_row="3" />


    </androidx.gridlayout.widget.GridLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/gridLayoutInputs"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/submit_btn"
        app:backgroundTint="@color/blue_wave"
        android:background="@drawable/button_zoom_effect"
        android:text="@string/suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>